@@ -6,6 +6,8 @@
   cause parser to incorrectly identify duplicate table names
 - bugfix: correctly fail on arrays without separators
 - bugfix: correctly fail when array ends without closing at EOF
+- bugfix: correctly fail when inline table is missing separators or has
+  trailing separator
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
